@@ -1,4 +1,3 @@
 for 0.5.7
     * manual recheck
-    * add auto-pickup folder
     * remap filenames
