@@ -93,6 +93,7 @@ class PreferencesDlg:
             self.glade.get_widget("combo_dht_proxy_type").set_active(self.preferences.get("dht_proxy_type"))
             self.glade.get_widget("combo_tracker_proxy_type").set_active(self.preferences.get("tracker_proxy_type"))
             self.glade.get_widget("combo_web_proxy_type").set_active(self.preferences.get("web_proxy_type"))
+            self.glade.get_widget("chk_autoload").set_active(self.preferences.get("autoload"))
             self.glade.get_widget("chk_send_info").set_active(self.preferences.get("send_info"))
             self.glade.get_widget("chk_pref_rc4").set_active(self.preferences.get("pref_rc4"))
             self.glade.get_widget("chk_peer_proxy").set_active(self.preferences.get("peer_proxy"))
@@ -120,6 +121,7 @@ class PreferencesDlg:
             self.glade.get_widget("txt_web_proxy_hostname").set_text(self.preferences.get("web_proxy_hostname"))
             self.glade.get_widget("txt_web_proxy_username").set_text(self.preferences.get("web_proxy_username"))
             self.glade.get_widget("txt_web_proxy_password").set_text(self.preferences.get("web_proxy_password"))
+            self.glade.get_widget("autoload_path_button").set_filename(self.preferences.get("default_autoload_path"))
             self.glade.get_widget("download_path_button").set_filename(self.preferences.get("default_download_path"))
             self.glade.get_widget("torrent_path_button").set_filename(self.preferences.get("default_torrent_path"))
             self.glade.get_widget("chk_enable_files_dialog").set_active(self.preferences.get("enable_files_dialog"))
@@ -202,6 +204,7 @@ class PreferencesDlg:
         self.preferences.set("encout_state", self.glade.get_widget("combo_encout").get_active())
         self.preferences.set("enclevel_type", self.glade.get_widget("combo_enclevel").get_active())
         self.preferences.set("peer_proxy_type", self.glade.get_widget("combo_peer_proxy_type").get_active())
+        self.preferences.set("autoload", self.glade.get_widget("chk_autoload").get_active())
         self.preferences.set("send_info", self.glade.get_widget("chk_send_info").get_active())
         self.preferences.set("pref_rc4", self.glade.get_widget("chk_pref_rc4").get_active())
         self.preferences.set("peer_proxy", self.glade.get_widget("chk_peer_proxy").get_active())
@@ -238,6 +241,7 @@ class PreferencesDlg:
         self.preferences.set("peer_proxy_password", self.glade.get_widget("txt_peer_proxy_password").get_text())
         self.preferences.set("peer_proxy_hostname", self.glade.get_widget("txt_peer_proxy_hostname").get_text())
         self.preferences.set("use_default_dir", self.glade.get_widget("radio_save_all_to").get_active())
+        self.preferences.set("default_autoload_path", self.glade.get_widget("autoload_path_button").get_filename())
         self.preferences.set("default_download_path", self.glade.get_widget("download_path_button").get_filename())
         self.preferences.set("default_torrent_path", self.glade.get_widget("torrent_path_button").get_filename())
         self.preferences.set("enable_files_dialog", self.glade.get_widget("chk_enable_files_dialog").get_active())
@@ -322,6 +326,8 @@ class PreferencesDlg:
         value = widget.get_active()
         if widget == self.glade.get_widget('radio_save_all_to'):
             self.glade.get_widget('download_path_button').set_sensitive(value)
+            self.glade.get_widget('autoload_path_button').set_sensitive(value)
+            self.glade.get_widget('chk_autoload').set_sensitive(value)
         elif widget == self.glade.get_widget('chk_autoseed'):
             self.glade.get_widget('ratio_spinner').set_sensitive(value)
             self.glade.get_widget('chk_clear_max_ratio_torrents').set_sensitive(value)  
