@@ -44,6 +44,7 @@ if common.windows_check():
     "enabled_plugins" : "Torrent Files:Torrent Peers",
     "file_manager" : common.FileManager.xdg,
     "open_folder_stock" : True,
+    "autoload" : False,
     "open_folder_location": "",
     "send_info" : True,
     "auto_end_seeding" : False,
@@ -52,6 +53,7 @@ if common.windows_check():
     "enable_files_dialog" : False,
     "queue_above_completed" : False,
     "clear_max_ratio_torrents" : False,
+    "default_autoload_path" : os.path.expanduser("~"),
     "default_torrent_path" : os.path.join(os.path.expanduser("~"), 'deluge', 'torrentfiles'),
     "default_download_path" : os.path.expanduser("~"),
     "open_torrent_dialog_path" : os.path.expanduser("~"),
@@ -150,6 +152,7 @@ else:
     "enabled_plugins" : "Torrent Files:Torrent Peers",
     "file_manager" : common.FileManager.xdg,
     "open_folder_stock" : True,
+    "autoload" : False,
     "open_folder_location": "",
     "send_info" : True,
     "auto_end_seeding" : False,
@@ -158,6 +161,7 @@ else:
     "enable_files_dialog" : False,
     "queue_above_completed" : False,
     "clear_max_ratio_torrents" : False,
+    "default_autoload_path" : os.path.expanduser("~"),
     "default_torrent_path" : os.path.join(xdg.BaseDirectory.save_config_path('deluge'), 'torrentfiles'),
     "default_download_path" : os.path.expanduser("~"),
     "open_torrent_dialog_path" : os.path.expanduser("~"),
